# sticker-convert

./: .dockerignore  .gitignore  .gitmodules  AppImageBuilder-aarch64.yml  AppImageBuilder-arm64.yml  AppImageBuilder-arm_aarch64.yml  AppImageBuilder-x86_64.yml  AppImageBuilder.yml  COMPILING.md  Dockerfile  Dockerfile.gui  MANIFEST.in  README.md  TODO.md  compile.py  docker-compose-gui.yml  docker-compose.yml  docker-run.sh  get-deps-macos.sh  get-deps-windows.bat  get-latest-magick-windows.py  get_deps.py  kakao_anim_note.md  magick-compile-macos.sh  magick-compile.sh  msicreator.json  nuitka.config.yml  pyproject.toml  requirements-bin.txt  requirements-build.txt  requirements-dev.txt  requirements-linux-x86_64.txt  requirements-src.txt  requirements-type.txt  requirements.txt  run_cli_macos_linux.sh  run_cli_windows.bat  run_gui_macos_linux.sh  run_gui_windows.bat  run_me_first.command  (+10 more)
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: build.yml  check_and_fix.yml
docs/: COMPILING.md  TODO.md  guide_band.md  guide_discord.md  guide_kakao.md  guide_line.md  guide_ogq.md  guide_signal.md  guide_telegram.md  guide_viber.md  guide_whatsapp.md
docs/en_US/: COMPILING.md  guide_band.md  guide_discord.md  guide_imessage.md  guide_kakao.md  guide_line.md  guide_mastodon.md  guide_misskey.md  guide_signal.md  guide_telegram.md  guide_viber.md  guide_whatsapp.md
docs/ja_JP/: COMPILING.md  README.md  guide_band.md  guide_discord.md  guide_imessage.md  guide_kakao.md  guide_line.md  guide_mastodon.md  guide_misskey.md  guide_ogq.md  guide_signal.md  guide_telegram.md  guide_viber.md  guide_whatsapp.md
docs/zh_CN/: COMPILING.md  README.md  guide_band.md  guide_discord.md  guide_imessage.md  guide_kakao.md  guide_line.md  guide_mastodon.md  guide_misskey.md  guide_ogq.md  guide_signal.md  guide_telegram.md  guide_viber.md  guide_whatsapp.md
docs/zh_TW/: COMPILING.md  README.md  guide_band.md  guide_discord.md  guide_imessage.md  guide_kakao.md  guide_line.md  guide_mastodon.md  guide_misskey.md  guide_ogq.md  guide_signal.md  guide_telegram.md  guide_viber.md  guide_whatsapp.md
scripts/: build_appimage.dockerfile  build_appimage.sh  build_appimage_aarch64.dockerfile  build_appimage_x86_64.dockerfile  delocate-fuse-dir.py  hold_control_and_click_open_me_first.command  macos_read_me_first.txt  nuitka_build_aarch64.dockerfile  nuitka_build_amd64.dockerfile  nuitka_build_with_docker.sh  nuitka_build_x86_64.dockerfile  opt-comp-experiment.py  run_me_first.command  startapp.sh  stub.c  update-locales.sh  update-xcode-imessage-iconset.py
signalstickers_client/utils/ca/: cacert.pem
src/: main.py  sticker-convert.py
src/sticker_convert/: __init__.py  __main__.py  cli.py  converter.py  definitions.py  flow.py  gui.py  job.py  job_option.py  version.py
src/sticker_convert/auth/: auth_base.py  auth_discord.py  auth_kakao_android_login.py  auth_kakao_desktop_login.py  auth_kakao_desktop_memdump.py  auth_line.py  auth_mastodon.py  auth_misskey.py  auth_signal.py  auth_telethon.py  auth_viber.py  auth_whatsapp.py  get_kakao_auth.py  get_line_auth.py  get_signal_auth.py  telegram_api.py
src/sticker_convert/downloaders/: download_band.py  download_base.py  download_discord.py  download_kakao.py  download_line.py  download_mastodon.py  download_misskey.py  download_ogq.py  download_signal.py  download_telegram.py  download_viber.py  download_whatsapp.py
src/sticker_convert/gui_components/: gui_utils.py
src/sticker_convert/gui_components/frames/: comp_frame.py  config_frame.py  control_frame.py  cred_frame.py  input_frame.py  output_frame.py  progress_frame.py  right_clicker.py
src/sticker_convert/gui_frames/: comp_frame.py  config_frame.py  control_frame.py  cred_frame.py  input_frame.py  output_frame.py  progress_frame.py  right_clicker.py
src/sticker_convert/gui_windows/: advanced_compression_window.py  base_window.py  kakao_get_auth_window.py  line_get_auth_window.py  signal_get_auth_window.py
src/sticker_convert/ios-message-stickers-template/: README.md
src/sticker_convert/media/: decrypt_kakao.py
src/sticker_convert/resources/: compression.json  emoji.json  help.ja_JP.json  help.json  help.zh_CN.json  help.zh_TW.json  input.ja_JP.json  input.json  input.zh_CN.json  input.zh_TW.json  memdump_linux.sh  memdump_windows.ps1  output.ja_JP.json  output.json  output.zh_CN.json  output.zh_TW.json
src/sticker_convert/uploaders/: compress_misskey.py  compress_wastickers.py  upload_base.py  upload_mastodon.py  upload_misskey.py  upload_signal.py  upload_telegram.py  upload_viber.py  upload_whatsapp.py  xcode_imessage.py
src/sticker_convert/utils/: apple_png_normalize.py  cache_store.py  callback.py  chrome_remotedebug.py  codec_info.py  converter.py  curr_dir.py  dir_utils.py  emoji.py  fake_cb_msg.py  format_verify.py  get_kakao_auth.py  get_line_auth.py  get_signal_auth.py  gui_utils.py  json_manager.py  metadata_handler.py  process.py  run_bin.py  singletons.py  translate.py  url_detect.py
sticker_convert/: __init__.py  cli.py  flow.py  gui.py  main.py  preset.json  sticker_convert_cli.py  sticker_convert_gui.py
sticker_convert/downloaders/: download_kakao.py  download_kakao_animated.py  download_kakao_static.py  download_line.py  download_signal.py  download_telegram.py
sticker_convert/icon/: appicon.icns
sticker_convert/resources/: bins.json  compression.json  help.json  input.json  output.json
sticker_convert/uploaders/: compress_wastickers.py  upload_signal.py  upload_telegram.py  xcode_imessage.py
sticker_convert/utils/: cache_store.py  codec_info.py  converter.py  curr_dir.py  exceptions.py  format_verify.py  get_kakao_auth.py  get_kakao_auth_token.py  get_line_auth.py  get_signal_auth.py  json_manager.py  lottie_convert.py  metadata_handler.py  run_bin.py  sticker_convert.py
tests/: common.py  test_compression.py  test_download.py  test_export.py
tests/samples/: animated_apng_160x90_1s.apng  animated_tgs_512x512_1s.tgs  animated_webm_160x90_12s.webm  animated_webm_160x90_1s.webm  animated_webm_960x540_1s.webm
(+52 files in other folders)
